--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
     "@pluritech/ion-mask": "^1.2.0",
+    "br-mask": "0.0.4",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
