ajustes na tela de usuario

--- a/package.json
+++ b/package.json
@@ -25,29 +25,32 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
-    "@pluritech/ion-mask": "^1.2.0",
-    "br-mask": "0.0.4",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.3.3",
+    "br-mask": "0.0.6",
+    "core-js": "2.6.5",
+    "ionic-input-mask": "^1.0.1",
+    "ionic4-mask-directive": "1.0.2",
+    "rxjs": "6.5.1",
+    "rxjs-compat": "^6.5.1",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~7.3.1",
+    "@angular/cli": "^7.3.8",
     "@angular/compiler": "~7.2.2",
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.4.0",
-    "@types/node": "~10.14.2",
+    "@ionic/lab": "1.0.24",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~10.14.2",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
